--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port = 5454
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/capespheredb
 spring.datasource.username=postgres
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # This will create table automatically in database
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
